<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="ApplicationName">Tiny Tiny RSS Reader</string>
<string name="ApplicationDescription">Tiny Tiny RSS Reader is an application for reading your feeds from your Tiny Tiny RSS instance.</string>

<string name="AboutActivity.Title">About</string>
<string name="AboutActivity.CloseBtn">Close</string>
<string name="AboutActivity.VersionText">Version:</string>
<string name="AboutActivity.UrlTextValue">http://code.google.com/p/ttrss-reader/</string>
<string name="AboutActivity.LicenseText">License:</string>
<string name="AboutActivity.LicenseTextValue">GPL v3</string>

<string name="ArticleActivity.OpenLink">Open article</string>
<string name="ArticleActivity.OpenCommentLink">Open comments</string>
<string name="ArticleActivity.MarkRead">Mark as read</string>
<string name="ArticleActivity.MarkUnread">Mark as unread</string>

<string name="Commons.PleaseWait">Please wait...</string>
<string name="Commons.NothingToDisplay">Nothing to display.</string>
<string name="Commons.UpdateReadState">Updating read state</string>

<string name="FeedHeadlinesListActivity.MarkAllRead">Mark all as read</string>
<string name="FeedHeadlinesListActivity.MarkAllUnread">Mark all as unread</string>

<string name="ConnectionPreferenceCategoryTitle">Connection</string>
<string name="ConnectionUrlPreferenceTitle">Connection URL</string>
<string name="ConnectionUrlPreferenceSummary">The URL to your Tiny Tiny RSS instance.</string>
<string name="ConnectionUsernamePreferenceTitle">Username</string>
<string name="ConnectionUsernamePreferenceSummary">The username of your Tiny Tiny RSS account.</string>
<string name="ConnectionPasswordPreferenceTitle">Password</string>
<string name="ConnectionPasswordPreferenceSummary">The password of your Tiny Tiny RSS account.</string>

<string name="UsagePreferenceCategoryTitle">Usage</string>
<string name="AutomaticMarkReadPreferenceTitle">Automatically mark article as read</string>
<string name="AutomaticMarkReadPreferenceSummary">If checked, articles will be marked as read when openning them.</string>

<string name="DisplayPreferenceCategoryTitle">Display</string>
<string name="DisplayVirtualPreferenceTitle">Show virtual feeds</string>
<string name="DisplayVirtualPreferenceSummary">Uncheck to hide TTRSS virtual feeds.</string>
<string name="DisplayVirtualUnreadPreferenceTitle">Show unread count in virtual feeds</string>
<string name="DisplayVirtualUnreadPreferenceSummary">Uncheck for performances.</string>
<string name="AlwaysFullRefreshPreferenceTitle">Always perform a full refresh</string>
<string name="AlwaysFullRefreshPreferenceSummary">Check to always perform full data refresh.</string>

<string name="ConnectionErrorActivity.Title">Oups...</string>
<string name="ConnectionErrorActivity.UserMessage">I was unable to connect to your Tiny Tiny RSS instance, please check your connection and/or connection settings.</string>
<string name="ConnectionErrorActivity.ErrorTitle">Error details:</string>
<string name="ConnectionErrorActivity.CloseBtn">Close</string>
<string name="ConnectionErrorActivity.ShowPreferencesBtn">Preferences</string>

<string name="Main.ShowPreferencesMenu">Preferences</string>
<string name="Main.RefreshMenu">Refresh</string>
<string name="Main.ShowAboutMenu">About</string>
<string name="Main.Nothing">No categories to display. Check your connection and/or your connection settings.</string>

</resources>
